# runekana

./: .gitignore  LICENSE  README.md  debug_text.py  default.nix  flake.nix  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/runekana/: __init__.py  document.py  epub.py  inject.py  llm.py  main.py  text.py  tokenizer.py  xhtml.py
tests/: test_context.py  test_document.py  test_inject.py  test_text.py  test_tokenizer.py
tests/fixtures/: rashomon.epub
