[project]
name = "runekana"
version = "0.1.0"
description = "Furigana annotation tool for Japanese EPUB files"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.67.0",
    "lxml>=6.0.2",
    "tenacity>=8.0.0",
    "openai>=1.50.0",
    "pydantic>=2.0.0",
    "sudachipy>=0.6.10",
    "sudachidict-full>=20260116",
    "jaconv>=0.3.4",
]

[project.scripts]
runekana = "runekana.main:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


