[project]
name = "runekana"
version = "0.1.0"
description = "Furigana annotation tool for Japanese EPUB files"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.67.0",
    "lxml>=6.0.2",
    "tenacity>=8.0.0",
    "openai>=1.50.0",
    "pydantic>=2.0.0",
    "sudachipy>=0.6.10",
    "sudachidict-full>=20260116",
    "jaconv>=0.3.4",
    "rich>=14.3.3",
]

[project.scripts]
runekana = "runekana.main:cli"

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "pytest>=9.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pyright]
include = ["src", "tests", "debug_text.py"]
pythonVersion = "3.13"
typeCheckingMode = "basic"